src/test/ui/issues/issue-76077.stderr
error: cannot construct `Foo` with struct literal syntax due to private fields
  --> $DIR/issue-76077.rs:8:5
   |
LL |     foo::Foo {};
   |     ^^^^^^^^
   |
   = note: ... and other private field `you_cant_use_this_field` that was not provided

error: aborting due to previous error

